[gd_scene load_steps=3 format=3 uid="uid://b0c6r6bnufsti"]

[ext_resource type="Script" path="res://police.gd" id="1_hag3o"]
[ext_resource type="Texture2D" uid="uid://bd7nndju0al0u" path="res://assets/Police_Car/police.png" id="2_sncmj"]

[node name="Area2D" type="Area2D"]
collision_layer = 2
script = ExtResource("1_hag3o")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.13, 0.13)
texture = ExtResource("2_sncmj")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
scale = Vector2(0.13, 0.13)
polygon = PackedVector2Array(-83, 5, -86, 26, -57, 47, -36, 36, 31, 38, 49, 47, 69, 38, 82, 38, 82, 4, 49, -1, 36, -28, -22, -26, -39, -10)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(16.5, 2)
scale = Vector2(0.15, 0.2)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
